tests/snapshots/snapshot_test__two_sessions_conflict_same_file.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  uwc

○  jjagent: session session1 pt. 2

Claude-session-id: session1-conflict-12345678

Modified regular file claude.txt:
   1    1: session 21 second version
○  jjagent: session session2

Claude-session-id: session2-conflict-87654321

Modified regular file claude.txt:
   1    1: session 12 version
○  jjagent: session session1

Claude-session-id: session1-conflict-12345678

Added regular file claude.txt:
        1: session 1 version
○  user

Added regular file user.txt:
        1: user's content
○  base

◆
